# libretro-rimage

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile.common  Makefile.libretro  README.md
src/: rimage_libretro.c
