CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(rimage_libretro)
SET(CMAKE_C_STANDARD 99)
INCLUDE(FetchContent)

FETCHCONTENT_DECLARE(rimage GIT_REPOSITORY https://github.com/RobLoach/rimage.git GIT_TAG master)
FETCHCONTENT_MAKEAVAILABLE(rimage)

FETCHCONTENT_DECLARE(libretro GIT_REPOSITORY https://github.com/libretro/libretro-common.git GIT_TAG master)
FETCHCONTENT_MAKEAVAILABLE(libretro)

FILE(GLOB_RECURSE SOURCE_FILES CONFIGURE_DEPENDS src/*.c)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SOURCE_FILES})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES PREFIX "")
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${libretro_SOURCE_DIR}/include)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE rimage)